# fast_kinda_solid_api

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  docker-compose.yaml  mypy.ini  pyproject.toml  pytest.ini
docker/: Dockerfile
fast_kinda_solid_api/: config.py  contexts.py  database.py  job.py  middleware.py  principals  repositories.py  response.py  server.py  services.py
fast_kinda_solid_api/components/aws/: secrets_manager.py  settings.py
fast_kinda_solid_api/components/base/: secrets.py
fast_kinda_solid_api/components/tokens/: jwk.py  jwt.py
fast_kinda_solid_api/core/: dependencies.py  dependency_provider.py  settings.py
fast_kinda_solid_api/core/data/: convertible.py  dto.py  model.py  schema.py
fast_kinda_solid_api/core/layers/: repository.py  service.py
fast_kinda_solid_api/core/observability/: context.py  logs.py  tracing.py
fast_kinda_solid_api/data/: convertible.py  dto.py  models.py  schemas.py
fast_kinda_solid_api/domain/: dependencies.py  dto.py  models.py  repositories.py  schemas.py
fast_kinda_solid_api/observability/: config.py  context.py  logs.py  tracing.py
fast_kinda_solid_api/schema/: base.py  response.py
scripts/update_all/: main.py  setup.py
tests/: conftest.py  test_dto.py  test_models.py  test_repositories.py  test_server.py
tests/core/: test_repositories.py
tests/domain/: test_dto.py  test_repositories.py
tests/fixtures/: db.py  dtos.py  models.py  repositories.py  schemas.py
tests/observability/: test_logs.py  test_tracing.py
tests/services/: test_aws_secrets_manager.py
(+9 files in other folders)
